# sara-shield

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
safety_shield/: .clang-format  CMakeLists.txt  CTestCustom.cmake  __init__.py  test_coverage.sh
safety_shield/bindings/: safety_shield_bindings.cpp
safety_shield/config/: cmu_mocap.yaml  cmu_mocap_no_hand.yaml  cmu_mocap_no_hand_edge.yaml  human_reach_TUM_lab.yaml  human_reach_schunk_setup.yaml  human_reach_test_arm_pos.yaml  human_reach_test_arm_pos_cm.yaml  human_reach_test_arm_pos_cm_kf.yaml  human_reach_test_single_joint.yaml  human_reach_test_single_joint_cm.yaml  human_reach_test_single_joint_cm_kf.yaml  human_reach_test_single_joint_error cm_kf.yaml  human_reach_test_single_joint_error.yaml  human_reach_test_single_joint_error_cm.yaml  human_reach_test_single_joint_kf.yaml  mujoco_mocap.yaml  mujoco_mocap_edge.yaml  robot_parameters_iiwa.yaml  robot_parameters_jaco.yaml  robot_parameters_kinova3.yaml  robot_parameters_panda.yaml  robot_parameters_panda_new.yaml  robot_parameters_sawyer.yaml  robot_parameters_schunk.yaml  robot_parameters_ur5e.yaml  robot_reach_test_siciliano.yaml  robot_reach_test_siciliano_2.yaml  robot_reach_test_single_joint.yaml  trajectory_parameters_iiwa.yaml  trajectory_parameters_jaco.yaml  trajectory_parameters_kinova3.yaml  trajectory_parameters_modrob0.yaml  trajectory_parameters_modrob1.yaml  trajectory_parameters_panda.yaml  trajectory_parameters_sawyer.yaml  trajectory_parameters_schunk.yaml  trajectory_parameters_ur5e.yaml
safety_shield/include/safety_shield/: config_parser.h  config_safety_shield.h  config_utils.h  controller.h  exceptions.h  human_reach.h  kalman_filter.h  long_term_traj.h  measurement_handler.h  motion.h  path.h  robot_params.h  robot_reach.h  rviz_marker.h  safety_shield.h  safety_shield_logger.h  trajectory_utils.h  verification_utils.h  verify.h  verify_iso.h
safety_shield/scripts/: urdf_capsule_generation.py
safety_shield/src/: config_utils.cc  controller.cc  debug.cc  debug_PFL.cc  debug_real_world_setup.cc  debug_single_step.cc  hrgym_scenario_debug.cc  human_reach.cc  jumping_measurement_debug.cc  kalman_filter.cc  leo_debug.cc  long_term_traj.cc  measurement_handler.cc  motion.cc  path.cc  robot_reach.cc  safety_shield.cc  safety_shield_alternative.cc  self_constrained_collision_debug.cc  trajectory_utils.cc  unconstrained_collision_debug.cc  verification_utils.cc  verify_iso.cc
safety_shield/tests/bindings/: test_ltt.py  test_safety_shield.py
safety_shield/tests/include/: human_reach_fixture.h  long_term_traj_fixture.h  motion_fixture.h  path_fixture.h  robot_reach_fixture.h  safety_shield_fixture.h  verify_iso_fixture.h
safety_shield/tests/src/: capsule_tests.cc  human_reach_tests.cc  long_term_traj_tests.cc  motion_tests.cc  path_tests.cc  robot_reach_tests.cc  safety_shield_tests.cc  trajectory_utils_tests.cc  verification_utils_tests.cc  verify_iso_tests.cc
